packages/css/flexbox-grid/src/grid.css
/*
// Css flexbox grid
*/

/* Containers and rows */
.grid-section {
  margin-bottom: var(--flexbox-grid-section-margin, 50px);
}

.container {
  box-sizing: border-box;
  width: 100%;
  max-width: var(--flexbox-grid-container-width, 1200px);
  margin-right: auto;
  margin-left: auto;
  padding-right: var(--flexbox-grid-container-spacing, 40px);
  padding-left: var(--flexbox-grid-container-spacing, 40px);

  &--fluid {
    max-width: 100%;
  }
}

.row {
  display: flex;
  flex-direction: row;
  flex-grow: 0;
  flex-shrink: 1;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-right: var(--flexbox-grid-half-gutter-compensation, -15px);
  margin-left: var(--flexbox-grid-half-gutter-compensation, -15px);

  &--reverse {
    flex-direction: row-reverse;
  }
}

/* Columns - size specifics */
.col-xs {
  flex-basis: 0;
  flex-grow: 1;
  max-width: 100%;
  padding-right: var(--flexbox-grid-half-gutter-width, 15px);
  padding-left: var(--flexbox-grid-half-gutter-width, 15px);

  &--nogrow {
    flex-basis: auto;
    flex-grow: 0;
  }
}

@each $i in (1,2,3,4,5,6,7,8,9,10,11,12) {
  .col-xs-$(i) {
    flex: 0 0 auto;
    flex-basis: calc($i / 12 * 100%);
    box-sizing: border-box;
    max-width: calc($i / 12 * 100%);
    padding-right: var(--flexbox-grid-half-gutter-width, 15px);
    padding-left: var(--flexbox-grid-half-gutter-width, 15px);
  }

  .col-xs-offset-$(i) {
    margin-left: calc($i / 12 * 100%);
  }
}

@each $breakpoint, $breakpoint-name in (ms, sm, md, lg, xl), (--viewport-ms-min, --viewport-sm-min, --viewport-md-min, --viewport-lg-min, --viewport-xl-min) {
  @media ($(breakpoint-name)) {
    .col-$(breakpoint) {
      flex-basis: 0;
      flex-grow: 1;
      max-width: 100%;
      padding-right: var(--flexbox-grid-half-gutter-width, 15px);
      padding-left: var(--flexbox-grid-half-gutter-width, 15px);

      &--nogrow {
        flex-basis: auto;
        flex-grow: 0;
      }

    }

    @each $i in (1,2,3,4,5,6,7,8,9,10,11,12) {
      .col-$(breakpoint)-$(i) {
        flex: 0 0 auto;
        flex-basis: calc($i / 12 * 100%);
        box-sizing: border-box;
        max-width: calc($i / 12 * 100%);
        padding-right: var(--flexbox-grid-half-gutter-width, 15px);
        padding-left: var(--flexbox-grid-half-gutter-width, 15px);
      }

      .col-$(breakpoint)-offset-$(i) {
        margin-left: calc($i / 12 * 100%);
      }
    }
  }
}

